# CATnet

./: .clang-format  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Hydrogen.yml  LICENSE  README.md  SECURITY.md  compile_commands.json  format.sh  gen_comp_db.sh  meson.build  meson_options.txt  tmpmi0otu90-ascii.cast
.ccls-cache/@@home@milo@Developer@CATNET/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@dirent.h.blob  @usr@include@bits@dirent_ext.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@sigaction.h.blob  (+297 more)
.ccls-cache/@home@milo@Developer@CATNET/: build@meson-private@sanitycheckcpp.cc.blob  src@daemon.cpp  src@daemon.cpp.blob  src@logging@include@log.hpp.blob  src@logging@log.cpp.blob  src@participant@participant.cpp.blob  src@participant@participant.hpp  src@participant@participant.hpp.blob  src@participant@registrar_exchange.cpp  src@participant@registrar_exchange.cpp.blob  src@participant@registrar_exchange.hpp.blob  src@participant@whisker_exchange.cpp.blob  src@participant@whisker_exchange.hpp.blob  src@registrar@registrar.cpp  src@registrar@registrar.cpp.blob  src@registrar@registrar.hpp.blob  src@sockets@message.cpp.blob  src@sockets@socket_compat.cpp.blob  src@sockets@tcp_client_socket.cpp  src@sockets@tcp_client_socket.cpp.blob  src@sockets@tcp_server_socket.cpp.blob  src@sockets@tcp_socket.cpp.blob  src@sockets@udp_client_socket.cpp  src@sockets@udp_client_socket.cpp.blob  src@sockets@udp_server_socket.cpp.blob  src@sockets@udp_socket.cpp  src@sockets@udp_socket.cpp.blob  subprojects@CLI11-1.9.1@book@code@flags.cpp.blob  subprojects@CLI11-1.9.1@book@code@geet.cpp.blob  subprojects@CLI11-1.9.1@book@code@intro.cpp.blob  subprojects@CLI11-1.9.1@book@code@simplest.cpp.blob  subprojects@CLI11-1.9.1@examples@callback_passthrough.cpp.blob  subprojects@CLI11-1.9.1@examples@digit_args.cpp.blob  subprojects@CLI11-1.9.1@examples@enum.cpp.blob  subprojects@CLI11-1.9.1@examples@enum_ostream.cpp.blob  subprojects@CLI11-1.9.1@examples@formatter.cpp.blob  subprojects@CLI11-1.9.1@examples@groups.cpp.blob  subprojects@CLI11-1.9.1@examples@inter_argument_order.cpp.blob  subprojects@CLI11-1.9.1@examples@json.cpp.blob  subprojects@CLI11-1.9.1@examples@modhelp.cpp.blob  (+79 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clang-tidy-review.yml  coverage.yml  (+4 more)
scripts/: cargo.sh  head_whisker_exchange_pb2.py  protoc  test-participant.py
src/: Build.yml  Hydrogen.yml  compile_commands.json  daemon.cpp  meson.build
src/catnet/: Build.yml  Hydrogen.yml
src/clients/cli/: cli.cpp  daemon.cpp  meson.build
src/configuration/: conf.cpp
src/configuration/include/: conf.hpp
src/daemon/: Hydrogen.yml  main.cpp
src/docs/: Doxyfile.in  meson.build
src/head/: head.cpp  head.hpp  meson.build
src/head/docs/: Doxyfile.in
src/head/tests/: head.cpp  meson.build
src/include/: args.hpp
src/kat/: kat.cpp  meson.build
src/logging/: log.cpp  meson.build
src/logging/docs/: Doxyfile.in  meson.build
src/logging/include/: log.hpp
src/logging/tests/: log.cpp  meson.build
src/message/: encrypt.cpp  meson.build  message.cpp
src/message/include/: encrypt.hpp  message.hpp
src/participant/: message.cpp  message.hpp  participant.cpp  participant.hpp  registrar_exchange.cpp  registrar_exchange.hpp  update_catstate.cpp  whisker_exchange.cpp  whisker_exchange.hpp
src/participant/include/: other_participant.hpp  participant.hpp  registrar_exchange.hpp  state.hpp  update_catstate.hpp  whisker_exchange.hpp
src/pch/: pch.hpp
src/proto/: base.proto  head_whisker_exchange.pb.cc  head_whisker_exchange.pb.h  head_whisker_exchange.proto  meson.build  pubkey_exchange.proto  test_connection.proto
src/registrar/: registrar.cpp  registrar.hpp
src/sockets/: Cargo.toml  LICENSE.md  README.md  meson.build  message.cpp  socket_compat.cpp  socket_compat.hpp  tcp_client_socket.cpp  tcp_client_socket.hpp  tcp_server_socket.cpp  tcp_server_socket.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_client_socket.cpp  udp_client_socket.hpp  udp_server_socket.cpp  udp_server_socket.hpp  udp_socket.cpp  udp_socket.hpp
src/sockets.bak/: meson.build
src/sockets/include/: message.hpp  socket_compat.hpp  tcp_client_socket.hpp  tcp_server_socket.hpp  tcp_socket.hpp  udp_client_socket.hpp  udp_server_socket.hpp  udp_socket.hpp
src/sockets/old/: meson.build  socket_compat.cpp
src/tap/: alloc.c  ip.c  tap.cpp  up.c
src/tap/include/: alloc.h  ip.h  tap.hpp  up.h
src/tun/: alloc.c  ip.c  tun.cpp  up.c
src/tun/include/: alloc.h  ip.h  tun.hpp  up.h
src/whisker/: meson.build  whisker.cpp  whisker.hpp
src/whisker/docs/: Doxyfile.in
src/whisker/tests/: meson.build  whisker.cpp
subprojects/: README.md  gtest.wrap
test/: test.c
tests/: daemon_test.cpp  meson.build
tests/pch/: pch.hpp
(+53 files in other folders)
